Fixed h3 spacing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -93,7 +93,7 @@ h3 {
   text-transform: uppercase;
   letter-spacing: 2px;
   color: var(--accent);
-  margin: 0 0 30px 0;
+  margin: 0 0 28px 0;
   display: inline-block;
 }
 
